# alloca

./: .env.example  Dockerfile  celerybeat-schedule  docker-compose.yml  pyproject.toml
app/: celery_app.py  database.py  main.py
